<resources>
	<string name="action_settings">Settings</string>
	<string name="app_name">K.S.F</string>
	<string name="app_name_full">Kriptosistem File</string>
	<string name="app_name_full_free">Kriptosistem File</string>
	<string name="app_name_full_pro">Kriptosistem File</string>
	<string name="point_1"> 1: Default Directories</string>
	<string name="point_2"> 2: Custom Directories</string>
	<string name="point_3"> 3: Help Button</string>
	<string name="point_4"> 4: Selected File</string>
	<string name="point_5"> 5: Encrypted File</string>
	<string name="point_6"> 6: Encrypt/Decrypt Button</string>
	<string name="point_7"> 7: Direct to the Main Menu</string>
	<string name="point_8"> 8: Set Session Password</string>
	<string name="set_1"> Shortcuts to the available volumes on the current device</string>
	<string name="set_2"> Set custom directories for result of file encryption or file decryption</string>
	<string name="set_3"> Discribe how to use this application</string>
	<string name="set_4"> Click to select file! Selected file can be : (1) Encrypted or Decrypted (according to the state of the selected file) by Button 6, (2) Renamed, Opened, Deleted file</string>
	<string name="set_5"> Encrypt file can be recognized by .enc extentions and "lock" icons</string>
	<string name="set_6"> Encrypt or Decrypt (according to the selected item)files</string>
	<string name="set_7"> Go to Directly to the applications main menu</string>
	<string name="set_8"> A password is not set to enter the application, but set for the current encryption/decryption session. You may have an unlimited number of password for any purpose</string>
	<string name="common_app_passwordVault_name">Password Vault</string>
	<string name="common_app_messageEncryptor_name">Text Encryptor</string>
	<string name="common_app_fileEncryptor_name">File Encryptor</string>
	<string name="common_app_settings_name">Settings</string>
	<string name="common_app_otherUtils_name">Other Utils</string>
	<string name="common_returnToMainMenuTitle">Return to Main Menu</string>
	<string name="common_ok_text">OK</string>
	<string name="common_cancel_text">Cancel</string>
	<string name="common_yes_text">Yes</string>
	<string name="common_no_text">No</string>
	<string name="common_continue_text">Continue</string>
	<string name="common_algorithm_text">Algorithm</string>
	<string name="common_benchmark_text">Benchmark</string>
	<string name="common_deleting_text">Deleting</string>
	<string name="common_question_delete">Do you want to delete &lt;b&gt;&lt;1&gt;&lt;/b&gt;?</string>
	<string name="common_question_wipe">Do you want to delete (with Wiping) &lt;b&gt;&lt;1&gt;&lt;/b&gt;?</string>
	<string name="common_question_leave">Do you want to leave &lt;b&gt;&lt;1&gt;&lt;/b&gt;?</string>
	<string name="common_question_saveChanges">Do you want to save changes?</string>
	<string name="common_question_delete_confirm">Selected item has been deleted.</string>
	<string name="common_name_text">Name</string>
	<string name="common_title_text">Title</string>
	<string name="common_password_text">Password</string>
	<string name="common_comment_text">Comment</string>
	<string name="common_notes_text">Notes</string>
	<string name="common_delete_text">Delete</string>
	<string name="common_save_text">Save</string>
	<string name="common_edit_text">Edit</string>
	<string name="common_item_text">Item</string>
	<string name="common_folder_text">Folder</string>
	<string name="common_file_text">File</string>
	<string name="common_files_text">Files</string>
	<string name="common_new_text">New</string>
	<string name="common_message_text">Message</string>
	<string name="common_toMainPage">Main Menu</string>
	<string name="common_enter_text">Enter</string>
	<string name="common_leave_text">Leave</string>
	<string name="common_copy_text">Copy</string>
	<string name="common_copyall_text">Copy All</string>
	<string name="common_copyParagraph_text">Copy Paragraph</string>
	<string name="common_noTextToCopy">No text to Copy</string>
	<string name="common_paste_text">Paste</string>
	<string name="common_encrypt_text">Encrypt</string>
	<string name="common_decrypt_text">Decrypt</string>
	<string name="common_encryption_text">Encryption</string>
	<string name="common_decryption_text">Decryption</string>
	<string name="common_moveTo_text">Move to</string>
	<string name="common_moveToFolder_text">Move to Folder</string>
	<string name="common_moreDots_text">More...</string>
	<string name="common_importVault_text">Import Vault</string>
	<string name="common_error_invalid_password_file_text">Invalid password or corrupted file</string>
	<string name="common_error_invalid_checksum_file_text">Invalid checksum</string>
	<string name="common_enterTheName_text">Set &lt;b&gt;name&lt;/b&gt;.</string>
	<string name="common_enterThePassword_text">Set &lt;b&gt;password&lt;/b&gt;.</string>
	<string name="common_enterFileName_text">Enter File Name</string>
	<string name="common_fileNameAlreadyExists_text">File name &lt;b&gt;&lt;1&gt;&lt;/b&gt; already exists.</string>
	<string name="common_fileRenamed_text">File &lt;b&gt;&lt;1&gt;&lt;/b&gt; has been renamed to &lt;b&gt;&lt;2&gt;&lt;/b&gt;</string>
	<string name="common_fileFailedToRename">Failed to rename file &lt;b&gt;&lt;1&gt;&lt;/b&gt;</string>
	<string name="common_fileFailedToDelete">Failed to delete file &lt;b&gt;&lt;1&gt;&lt;/b&gt;</string>
	<string name="common_generatingKey_text">Generating Key</string>
	<string name="common_compressing_text">Compressing</string>
	<string name="common_encrypting_text">Encrypting</string>
	<string name="common_decompressing_text">Decompressing</string>
	<string name="common_decrypting_text">Decrypting</string>
	<string name="common_wiping_text">Wiping</string>
	<string name="common_checkingdir_text">Checking Dir: &lt;1&gt; files</string>
	<string name="common_current_text">Current</string>
	<string name="common_unlock_text">Unlock</string>
	<string name="common_locked_text">Locked</string>
	<string name="common_incorrectFile_text">Incorrect File</string>
	<string name="common_unknownAlgorithm_text">Unknown algorithm or corrupted data</string>
	<string name="common_copyToClipboard_text">Copy to Clipboard</string>
	<string name="common_passwordCopiedToClipboard_text">Password has been copied to the system clipboard.</string>
	<string name="common_copyToClipboardWarning"><![CDATA[<font face="times new roman" color="#BBBB77"><small><i><b>Note:</b> Be careful when using the system clipboard for sensitive data (like passwords) manipulation. Some applications can monitor the clipboard and even archive its contents.</i></small></font>]]></string>
	<string name="common_xmlParsing_unexpectedElement">Unexpected Element</string>
	<string name="common_xmlParsing_incorrectSize">Incorrect Size</string>
	<string name="common_xmlParsing_incorrectData">Incorrect Data</string>
	<string name="common_xmlParsing_elementMissing">Mandatory Element Missing</string>
	<string name="common_warning_text">Warning</string>
	<string name="common_dontShowThisAgain">Don\'t show me this again</string>
	<string name="common_canceledByUser">Canceled by User</string>
	<string name="common_textCopiedToSystemClipboard">Text has been copied to the system clipboard.</string>
	<string name="common_goToURL_text">Go to URL</string>
	<string name="common_return_text">Return</string>
	<string name="common_noItems_text">No Items</string>
	<string name="common_noTextToLoad_text">No text to load</string>
	<string name="common_replacefile_text">Replace File</string>
	<string name="common_invalidPath_text">Invalid Path</string>
	<string name="common_noActionsAvailable_text">No actions available</string>
	<string name="common_noFiles_text">No files</string>
	<string name="common_whatsNew">What\'s New</string>
	<string name="common_selectedXItems"><![CDATA[Selected: <1> items]]></string>
	<string name="common_replacefile_question"><![CDATA[File <b><1></b> already exists. Do you want to replace the existing file?]]></string>
	<string name="common_importExportPathInvalid">Import/Export directory &lt;b&gt;&lt;1&gt;&lt;/b&gt; is invalid. Please use the app settings to correct it.</string>
	<string name="common_multipleFilesSelected">Multiple Files Selected</string>
	<string name="common_somethingWentWrong">Something went wrong</string>
	<string name="common_precessing_text">Processing</string>
	<string name="common_unavailable_text">unavailable</string>
	<string name="common_disabled_text">Disabled</string>
	<string name="common_disable_text">Disable</string>
	<string name="main_fileEncButton">File Encryptor</string>
	<string name="main_about">About</string>
	<string name="main_helpButton">Help</string>
	<string name="main_exitButton">Exit</string>
	<string name="main_report_title">&lt;b&gt;Application Security Report:&lt;/b&gt;&lt;br/&gt;</string>
	<string name="fe_goButton">Encrypt/Decrypt</string>
	<string name="fe_goButtonEncFile">Encrypt File</string>
	<string name="fe_goButtonDecFile">Decrypt File</string>
	<string name="fe_goButtonEncDir">Encrypt Dir</string>
	<string name="fe_tip_1">Tip: Long tap (or icon tap) to select folder</string>
	<string name="fe_tip_2">Tip: Delete File – select File/Folder, press More Button, choose Delete</string>
	<string name="fe_tip_3">Tip: Rename File – select File/Folder, press More Button, choose Rename</string>
	<string name="fe_select_destination">Select Destination</string>
	<string name="fe_selected_text">Selected:</string>
	<string name="fe_currentDir_text">Current Dir:</string>
	<string name="fe_emptyDir_text">Empty Folder</string>
	<string name="fe_question_cancel_title">Cancel</string>
	<string name="fe_question_cancel_question">Cancel current task?</string>
	<string name="fe_file_dialogTitle">File</string>
	<string name="fe_folder_dialogTitle">Folder</string>
	<string name="fe_deleteFile_dialogTitle">Delete File</string>
	<string name="fe_deleteFolder_dialogTitle">Delete Folder</string>
	<string name="fe_wipeFile_dialogTitle">Wipe File</string>
	<string name="fe_wipeFolder_dialogTitle">Wipe Folder</string>
	<string name="fe_zipFile_dialogTitle">Zip File</string>
	<string name="fe_zipFolder_dialogTitle">Zip Folder</string>
	<string name="fe_unzipFile_dialogTitle">Unzip File</string>
	<string name="fe_unzipFolder_dialogTitle">Unzip Folder</string>
	<string name="fe_fileactionDialog_universalTitle">Files/Folders</string>
	<string name="fe_fileactionDialog_selectAll">Select All</string>
	<string name="fe_fileactionDialog_deselectAll">Deselect All</string>
	<string name="fe_fileactionDialog_deleteFile">Delete File</string>
	<string name="fe_fileactionDialog_deleteFolder">Delete Folder</string>
	<string name="fe_fileactionDialog_deleteFiles">Delete Files</string>
	<string name="fe_fileactionDialog_wipeFile">Wipe File</string>
	<string name="fe_fileactionDialog_wipeFolder">Wipe Folder</string>
	<string name="fe_fileactionDialog_wipeFiles">Wipe Files</string>
	<string name="fe_fileactionDialog_renameFile">Rename File</string>
	<string name="fe_fileactionDialog_renameFolder">Rename Folder</string>
	<string name="fe_fileactionDialog_noFileSelected">No file selected.</string>
	<string name="fe_fileactionDialog_openFile">Open File</string>
	<string name="fe_fileactionDialog_sendFile">Send to</string>
	<string name="fe_fileDeleted">Selected file has been deleted.</string>
	<string name="fe_fileNotDeleted">Selected file cannot be deleted.</string>
	<string name="fe_fileReadOnly">This file is read only.</string>
	<string name="fe_directoryReadOnly">This directory is read only.</string>
	<string name="fe_parentDirectoryReadOnly">Parent directory is read only.</string>
	<string name="fe_directoryCannotBeSelected">This directory cannot be selected.</string>
	<string name="fe_fileRename">New File Name</string>
	<string name="fe_report_title">Report</string>
	<string name="fe_report_dec_title">Decryption Report</string>
	<string name="fe_report_enc_title">Encryption Report</string>
</resources>