<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_purple">

    <ScrollView
        android:id="@+id/help_ListScroll"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_gravity="top"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="40dp"
        >
        <LinearLayout
            android:id="@+id/S_settingsList"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:orientation="vertical"
            android:paddingRight="0dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ImageHelp"
                android:src="@drawable/help_image"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/point_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewTitleBackground"
                />
            <TextView
                android:text="@string/set_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewHelp"
                android:ellipsize="end"
                android:singleLine="false"
                />
            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/point_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewTitleBackground"
                />
            <TextView
                android:text="@string/set_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewHelp"
                android:ellipsize="end"
                android:singleLine="false">
            </TextView>
            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/point_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewTitleBackground"
                />
            <TextView
                android:text="@string/set_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewHelp"
                android:ellipsize="end"
                android:singleLine="false">
            </TextView>
            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/point_4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewTitleBackground"
                />
            <TextView
                android:text="@string/set_4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewHelp"
                android:ellipsize="end"
                android:singleLine="false">
            </TextView>
            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/point_5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewTitleBackground"
                />
            <TextView
                android:text="@string/set_5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewHelp"
                android:ellipsize="end"
                android:singleLine="false">
            </TextView>
            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/point_6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewTitleBackground"
                />
            <TextView
                android:text="@string/set_6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewHelp"
                android:ellipsize="end"
                android:singleLine="false">
            </TextView>
            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/point_7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewTitleBackground"
                />
            <TextView
                android:text="@string/set_7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewHelp"
                android:ellipsize="end"
                android:singleLine="false">
            </TextView>
            <TextView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:text="@string/point_8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewTitleBackground"
                />
            <TextView
                android:text="@string/set_8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewHelp"
                android:ellipsize="end"
                android:singleLine="false">
            </TextView>
        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_button"
        android:id="@+id/back"
        android:background="@null"
        android:onClick="backtoHome"
        android:layout_gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />
</RelativeLayout>
